<resources>
    <string name="app_name">Sugbo Eats</string>
    <string name="food_description_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dapibus, ex in finibus fermentum, dolor.</string>
    <string name="button_make_reservation">Make a Reservation</string>
    <string name="restaurant_menu_text">Menu</string>
    <string name="menu_item">Menu Item</string>
    <string name="menu_description">Description</string>
    <string name="menu_price">Price</string>

    <string name="restaurant_one_name">Heritage Table</string>
    <string name="restaurant_one_location">Colon Street, Cebu City</string>
    <string name="restaurant_one_operating_hours">10:00 am - 9:00 pm</string>
    <string name="restaurant_one_description">Heritage Table offers a nostalgic journey through Cebu’s culinary past, serving traditional dishes that have been passed down through generations.</string>

    <string name="restaurant_two_name">Fradel and Spies</string>
    <string name="restaurant_two_location">MJ Cuenco cor R Palma St, Cebu City</string>
    <string name="restaurant_two_operating_hours">8:00 am - 9:00 pm</string>
    <string name="restaurant_two_description">Fradel and Spies Restaurant delights diners with a diverse menu featuring delectable satay, mouthwatering pizza, and more, all crafted to perfection.</string>

    <string name="restaurant_three_name">Kasikas</string>
    <string name="restaurant_three_location">Fuente Osmeña Avenue, Cebu City</string>
    <string name="restaurant_three_operating_hours">10:00 am - 10:00 pm</string>
    <string name="restaurant_three_description">Experience the best of Filipino and foreign cuisines at Kasikas Restaurant, located in the bustling streets of Fuente. Indulge in authentic flavors!</string>

    <string name="restaurant_four_name">Sugbusog Grill House</string>
    <string name="restaurant_four_location">Parkmall, Mandaue City</string>
    <string name="restaurant_four_operating_hours">6:00 pm - 11:00 pm</string>
    <string name="restaurant_four_description">Sugbusog Grill House offers authentic Cebuano grilled dishes. Known for its flavorful marinades and fresh seafood, it\'s the perfect place for a casual yet memorable dining experience.</string>

    <string name="restaurant_five_name">Chef\’s Tasty</string>
    <string name="restaurant_five_location">Mactan Newtown, Lapu-lapu City</string>
    <string name="restaurant_five_operating_hours">1:00 pm - 10:00 pm</string>
    <string name="restaurant_five_description">Chef\'s Tasty serves a delightful array of Filipino favorite foods, offering authentic flavors and heartwarming dishes that bring the taste of home to every meal."</string>

    <string-array name="setting_types">
        <item>Indoor</item>
        <item>Alfresco</item>
    </string-array>

    <string-array name="number_of_guests">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string name="sugbo_eats"> SUGBO EATS </string>
    <string name="restaurants"> Restaurants </string>
    <string name="off_on_week"> 10% off on weekdays </string>
    <string name="off_for_4_5"> 20% off for 4-5 People </string>
    <string name="hom_heritage_ta"> Heritage Table </string>
    <string name="hom_fradel_and_"> Fradel and Spies </string>
    <string name="hom_kasikas"> Kasikas </string>
    <string name="hom_sugbusog_gr"> Sugbusog Grill House </string>
    <string name="hom_chef_s_tast"> Chefs Tasty </string>
    <string name="my_favorite"> My Favorites </string>
    <string name="resto"> Restaurant Name </string>
    <string name="table_reser">TABLE RESERVATION BOOKED SUCCESSFULLY! </string>
    <string name="a_confirmat"> A confirmation email will be sent to the email address you provided. Please show the confirmation email to the attending personnel when you arrive at your scheduled date and time. </string>
    <string name="if_you_have"> If you have concerns, please contact: </string>
    <string name="contact_lit"> contact@restaurant.com </string>
    <string name="phone_num"> 0912-345-6789 </string>
    <string name="return_to_h"> Return to Home </string>

    <string name="all_cap">SUGBO EATS</string>
    <string name="pass_re">Password Reset</string>
    <string name="pass_re_des1">To reset your password, please enter your existing</string>
    <string name="pass_re_des2">email address.</string>
    <string name="txt_email">Email</string>
    <string name="btn_continue">Continue</string>
    <string name="pass_re_li">Password Reset Link Sent</string>
    <string name="pass_re_li_d1">A secure password reset link has been sent to your</string>
    <string name="pass_re_li_d2">registered email address. Please check your inbox</string>
    <string name="pass_re_li_d3">and follow the instructions provided to complete the</string>
    <string name="pass_re_li_d4">password reset process.</string>
    <string name="btn_return">Return to Login</string>
    <string name="reservation">My Reservation</string>
    <string name="resto_name">Fradel and Spies</string>

    <style name="pass_re_ti">
        <item name="android:textSize">16sp</item>
        <item name="android:textStyle">bold</item>
        <item name="android:textColor">#000000</item>
        <item name="android:fontFamily">sans-serif</item>
    </style>

    <style name="pass_re_des">
        <item name="android:textSize">12sp</item>
        <item name="android:textColor">#000000</item>
        <item name="android:fontFamily">sans-serif</item>
    </style>

    <style name="email">
        <item name="android:textSize">16sp</item>
        <item name="android:textColor">#000000</item>
        <item name="android:fontFamily">sans-serif</item>
        <item name="android:textStyle">bold</item>
    </style>

    <style name="btn">
        <item name="android:textSize">16sp</item>
        <item name="android:textColor">#FEFEFE</item>
        <item name="android:textStyle">bold</item>
        <item name="android:fontFamily">sans-serif</item>
    </style>

    <style name="sugbo_eats">
        <item name="android:textSize">17sp</item>
        <item name="android:textColor">#FFFFFF</item>
        <item name="android:fontFamily">sans-serif</item>
        <item name="android:textStyle">bold</item>
    </style>

    <style name="my_reservat">
        <item name="android:textSize">24sp</item>
        <item name="android:textColor">#000000</item>
        <item name="android:fontFamily">sans-serif</item>
        <item name="android:textStyle">bold</item>
    </style>

    <style name="resto_name">
        <item name="android:textSize">15sp</item>
        <item name="android:textColor">#000000</item>
        <item name="android:fontFamily">sans-serif</item>
        <item name="android:textStyle">bold</item>
    </style>

    <style name="date_and_time">
        <item name="android:textSize">12sp</item>
        <item name="android:textColor">#000000</item>
        <item name="android:fontFamily">sans-serif</item>
    </style>

    <style name="resto_loc">
        <item name="android:textSize">12sp</item>
        <item name="android:textColor">#000000</item>
        <item name="android:fontFamily">sans-serif</item>
    </style>

    <style name="set_type">
        <item name="android:textSize">12sp</item>
        <item name="android:textColor">#000000</item>
        <item name="android:fontFamily">sans-serif</item>
    </style>

    <style name="num_guest">
        <item name="android:textSize">12sp</item>
        <item name="android:textColor">#000000</item>
        <item name="android:fontFamily">sans-serif</item>
    </style>

    <style name="decision">
        <item name="android:textSize">12sp</item>
        <item name="android:textColor">#000000</item>
        <item name="android:fontFamily">sans-serif</item>
    </style>
  
    <string name="sugbo_eats">
        Sugbo Eats
    </string>
    <string name="heading_one">Easy</string>
    <string name="heading_two">Convenient</string>
    <string name="heading_three">Enjoy</string>

    //Description
    <string name="desc_one">Effortlessly book your favorite tables with Sugbo Eats.</string>
    <string name="desc_two">Dine your way - alfresco, indoors, or with special requests.</string>
    <string name="desc_three">Enjoy hassle-free booking confirmations and QR code check-ins.</string>
    <string name="Finding">Finding the perfect ambiance for any occasion.</string>
    <string name="Taste">Taste the flavors of Cebu.</string>
    <string name="LogIn">Log In</string>
    <string name="SignUp">Sign Up</string>
</resources>