<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:contentDescription="@string/app_name"
        android:layout_width="416dp"
        android:layout_height="431dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/onboarding_last"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="399dp"
        android:layout_height="357dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.236">


        <TextView
            android:id="@+id/SugboEats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/app_name"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/finding"
            android:layout_width="356dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/SugboEats"
            android:layout_marginTop="13dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/Finding"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/taste"
            android:layout_width="302dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/finding"
            android:layout_marginTop="0dp"
            android:fontFamily="sans-serif"
            android:text="@string/Taste"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/LoginBtn"
            android:layout_width="172dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"


            android:layout_marginStart="0dp"

            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:layout_toStartOf="@+id/SignupBtn"
            android:text="@string/LogIn" />

        <Button
            android:id="@+id/SignupBtn"
            android:layout_width="176dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"

            android:layout_alignParentBottom="true"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="10dp"
            android:text="@string/SignUp" />


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>