<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/favorites"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/rec_background"
        android:layout_width="match_parent"
        android:layout_height="118dp"
        android:background="#1B262C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/searchrec"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rectangle_2homescreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sugbo_eats" />

    <TextView
        android:id="@+id/sugbo_eats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal|top"
        android:text="@string/sugbo_eats"
        android:textAppearance="@style/sugbo_eats"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/search"
        android:layout_width="40dp"
        android:layout_height="39dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sugbo_eats" />

    <View
        android:id="@+id/bottombar"
        android:layout_width="410dp"
        android:layout_height="47dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/rectangle_2homescreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imagehome"
        android:layout_width="34dp"
        android:layout_height="37dp"
        android:layout_marginBottom="3dp"
        android:background="@null"
        android:src="@drawable/homeicon2"
        app:layout_constraintBottom_toBottomOf="@id/bottombar"
        app:layout_constraintEnd_toEndOf="@id/bottombar"
        app:layout_constraintHorizontal_bias="0.169"
        app:layout_constraintStart_toStartOf="@id/bottombar"
        app:layout_constraintTop_toTopOf="@+id/bottombar"
        app:layout_constraintVertical_bias="0.777" />

    <ImageView
        android:id="@+id/imagesched"
        android:layout_width="47dp"
        android:layout_height="47dp"
        android:layout_marginBottom="5dp"
        android:background="@null"
        android:src="@drawable/timeicon"
        app:layout_constraintBottom_toBottomOf="@id/bottombar"
        app:layout_constraintEnd_toEndOf="@id/bottombar"
        app:layout_constraintHorizontal_bias="0.391"
        app:layout_constraintStart_toStartOf="@id/bottombar"
        app:layout_constraintTop_toTopOf="@+id/bottombar"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imagefave"
        android:layout_width="37dp"
        android:layout_height="35dp"
        android:layout_marginBottom="5dp"
        android:background="@null"
        android:src="@drawable/favicon2"
        app:layout_constraintBottom_toBottomOf="@id/bottombar"
        app:layout_constraintEnd_toEndOf="@id/bottombar"
        app:layout_constraintHorizontal_bias="0.638"
        app:layout_constraintStart_toStartOf="@id/bottombar"
        app:layout_constraintTop_toTopOf="@+id/bottombar"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageprof"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginBottom="5dp"
        android:background="@null"
        android:src="@drawable/proficon"
        app:layout_constraintBottom_toBottomOf="@id/bottombar"
        app:layout_constraintEnd_toEndOf="@id/bottombar"
        app:layout_constraintHorizontal_bias="0.856"
        app:layout_constraintStart_toStartOf="@id/bottombar"
        app:layout_constraintTop_toTopOf="@+id/bottombar"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/my_favorite"
        android:layout_width="151dp"
        android:layout_height="29dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="134dp"
        android:gravity="top"
        android:text="@string/my_favorite"
        android:textAppearance="@style/my_favorite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/fav1"
        android:layout_width="355dp"
        android:layout_height="120dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_corners"
        android:clipToOutline="true"
        android:scaleType="centerCrop"
        android:src="@drawable/homescreenresto1"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="187dp"
        app:layout_constraintTop_toBottomOf="@id/my_favorite"/>

    <TextView
        android:id="@+id/hom_heritage_ta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="80dp"
        android:gravity="center_horizontal|top"
        android:text="@string/hom_heritage_ta"
        android:textAppearance="@style/hom_heritage_ta"
        app:layout_constraintStart_toStartOf="@id/fav1"
        app:layout_constraintTop_toTopOf="@id/fav1" />

    <ImageView
        android:id="@+id/fav2"
        android:layout_width="355dp"
        android:layout_height="120dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corners"
        android:clipToOutline="true"
        android:scaleType="centerCrop"
        android:src="@drawable/homescreenresto2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fav1" />

    <TextView
        android:id="@+id/hom_fradel_and_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="88dp"
        android:gravity="center_horizontal|top"
        android:text="@string/hom_fradel_and_"
        android:textAppearance="@style/hom_fradel_and_"
        app:layout_constraintStart_toStartOf="@id/fav2"
        app:layout_constraintTop_toTopOf="@id/fav2" />

    <ImageView
        android:id="@+id/favorite1"
        android:layout_width="37dp"
        android:layout_height="35dp"
        android:layout_marginStart="332dp"
        android:layout_marginTop="132dp"
        android:background="@null"
        android:src="@drawable/favorite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/my_favorite" />

    <ImageView
        android:id="@+id/favorite2"
        android:layout_width="37dp"
        android:layout_height="35dp"
        android:layout_marginStart="332dp"
        android:layout_marginTop="100dp"
        android:background="@null"
        android:src="@drawable/favorite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/favorite1" />

</androidx.constraintlayout.widget.ConstraintLayout>
